# cob_calibration_data

./: .gitignore  .travis.rosinstall  .travis.xacro_test.sh  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  stack.xml
.github/workflows/: main.yml
cob3-1/calibration/: calibration.urdf.xacro  calibration_default.urdf.xacro  calibration_offset.urdf.xacro
cob3-1/calibration/cameras/: left.yaml
cob3-2/calibration/: calibration.urdf.xacro  calibration_default.urdf.xacro  calibration_offset.urdf.xacro
cob3-2/calibration/cameras/: right.yaml
cob3-3/calibration/: calibration.urdf.xacro  calibration_default.urdf.xacro  calibration_offset.urdf.xacro
cob3-3/calibration/cameras/: kinect_rgb.yaml  left.yaml  right.yaml
cob3-3/calibration/default/: calibration.urdf.xacro
cob3-4/calibration/: calibration.urdf.xacro  calibration_default.urdf.xacro  calibration_offset.urdf.xacro
cob3-5/calibration/: calibration.urdf.xacro  calibration_default.urdf.xacro  calibration_offset.urdf.xacro
cob3-5/calibration/cameras/: cam3d.yaml  left.yaml  right.yaml
cob3-5/calibration/default/: calibration.urdf.xacro
cob3-5b/calibration/: calibration_offset.urdf.xacro
cob3-6/calibration/: calibration.urdf.xacro  calibration.urdf.xacro.bak  calibration_default.urdf.xacro  calibration_offset.urdf.xacro
cob3-6/calibration/cameras/: left.yaml  right.yaml
cob3-6/calibration/default/: calibration.urdf.xacro
cob3-7/calibration/: calibration.urdf.xacro  calibration.urdf.xacro~  calibration_default.urdf.xacro  calibration_default.urdf.xacro~  calibration_offset.urdf.xacro  calibration_offset.urdf.xacro~
cob3-7/calibration/cameras/: kinect_rgb.yaml  left.yaml  right.yaml
cob3-8/calibration/: calibration_offset.urdf.xacro
cob3-9/calibration/: calibration_offset.urdf.xacro
cob3-9/calibration/cameras/: cam3d.yaml  right.yaml
cob4-1/calibration/: calibration_offset.urdf.xacro  head_cam.yaml
cob4-1/calibration/cameras/: head_cam.yaml  torso_cam3d_left.yaml  torso_cam3d_right.yaml
cob4-10/calibration/: calibration_offset.urdf.xacro  head_cam.yaml
cob4-10/calibration/cameras/: head_cam.yaml
cob4-2/calibration/: calibration_offset.urdf.xacro
cob4-2/calibration/cameras/: head_cam.yaml
cob4-24/calibration/: calibration_offset.urdf.xacro
cob4-25/calibration/: calibration_offset.urdf.xacro
cob4-3/calibration/: calibration_offset.urdf.xacro
cob4-30/calibration/: calibration_offset.urdf.xacro
cob4-5/calibration/: calibration_offset.urdf.xacro
cob4-5/calibration/cameras/: head_cam.yaml
cob4-7/calibration/: calibration_offset.urdf.xacro  head_cam.yaml
cob4-7/calibration/cameras/: head_cam.yaml
cob4-8/calibration/cameras/: head_cam.yaml
desire/calibration/: calibration.urdf.xacro  calibration_offset.urdf.xacro
raw3-1/calibration/: calibration.urdf.xacro  calibration_default.urdf.xacro  calibration_offset.urdf.xacro
raw3-2/calibration/: calibration.urdf.xacro  calibration_offset.urdf.xacro
raw3-3/calibration/: calibration.urdf.xacro  calibration_offset.urdf.xacro
raw3-4/calibration/: calibration.urdf.xacro  calibration_offset.urdf.xacro
raw3-5/calibration/: calibration.urdf.xacro  calibration_offset.urdf.xacro
raw3-6/calibration/: calibration.urdf.xacro  calibration_offset.urdf.xacro
raw4-0/calibration/: calibration_offset.urdf.xacro
