<package format="2">
  <name>cob_calibration_data</name>
  <version>0.6.19</version>
  <description>This repository holds the current calibration data for Care-O-bot.</description>

  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>
  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_calibration_data</url>
  <!-- <url type="bugtracker"></url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cob_supported_robots</build_depend>

  <exec_depend>xacro</exec_depend>

</package>
